--- a/src/reports/templates/reports/pdf.html
+++ b/src/reports/templates/reports/pdf.html
@@ -14,7 +14,7 @@
 <body>
     <h1>{{obj.name}}</h1>
     <hr>
-    <img src={{obj.image.path}} class="image" alt = "user profile picture">
+    <img src={{obj.image.path}} class="image" alt = "user profile">
     <br>
     <h3>Remarks</h3>
     <p>{{obj.remarks}}</p>
